add controllers and dbManager

--- a/AWSServerlessCoreApp/appsettings.json
+++ b/AWSServerlessCoreApp/appsettings.json
@@ -4,5 +4,10 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "AWS": {
+    "Region": "us-west-2",
+    "AccessKey": "AKIAJ25CDFC765FXQUYQ",
+    "SecretKey": "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"
   }
 }
