--- a/AWSServerlessCoreApp/AWSServerlessCoreApp.csproj
+++ b/AWSServerlessCoreApp/AWSServerlessCoreApp.csproj
@@ -12,10 +12,14 @@
   </ItemGroup>
   <ItemGroup>
 	<PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="2.0.3" />
+	<PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.8" />
+	<PackageReference Include="AWSSDK.Extensions.NetCore.Setup" Version="3.3.5" />
   <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+  <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
+  <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.1" />
-    <DotNetCliToolReference Include="Amazon.Lambda.Tools" Version="2.1.2" />
+    <DotNetCliToolReference Include="Amazon.Lambda.Tools" Version="2.1.3" />
   </ItemGroup>
 </Project>
