fix bug in data loading

--- a/AWSServerlessCoreApp/appsettings.json
+++ b/AWSServerlessCoreApp/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AWS": {
     "Region": "us-west-2",
-    "AccessKey": "AKIAJ25CDFC765FXQUYQ",
-    "SecretKey": "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"
+    "AccessKey": "AKIAIZV2VTM7AYPTHK5A",
+    "SecretKey": "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"
   }
 }
