--- a/AWSServerlessCoreApp/appsettings.json
+++ b/AWSServerlessCoreApp/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "AWS": {
-    "Region": "us-west-2",
-    "AccessKey": "AKIAIZV2VTM7AYPTHK5A",
-    "SecretKey": "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"
+    "Region": "us-east-1",
+    "AccessKey": "AKIAIWID3SWSWDCTQKEA",
+    "SecretKey": "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"
   }
 }
